# platformer_ghosts

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: ManagerLayer.cpp  android.yml  mac.yml  multi-platform.yml
src/: Includes.hpp  Main.cpp  includes.hpp  main.cpp
src/Player/: Player.cpp  Player.hpp
src/Recorder/: Recorder.cpp  Recorder.hpp
src/RecordsManager/: RecordsManager.cpp  RecordsManager.hpp
src/UI/: GhostUI.cpp  GhostUI.hpp  ListLayer.cpp  ListLayer.hpp  ManagerLayer.cpp  ManagerLayer.hpp  RecordsLayer.cpp  RecordsLayer.hpp
